--- a/index.html
+++ b/index.html
@@ -30,7 +30,19 @@
             backdrop-filter: blur(10px);
             border: 1px solid rgba(0, 249, 255, 0.2);
         }
+        .logo {
+    width: 96px;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.12);
+    flex-shrink: 0;
+}
 
+         .header-text {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+}
         .header {
             text-align: center;
             margin-bottom: 40px;
@@ -295,15 +307,31 @@
             font-size: 0.9em;
             opacity: 0.9;
             color: #ffffff;
+        @media (max-width: 640px) {
+    .header {
+        flex-direction: column;
+        text-align: center;
+        gap: 12px;
+    }
+    .header p {
+        width: 100%;
+    }
+}
         }
     </style>
 </head>
 <body>
     <div class="dashboard">
         <div class="header">
-            <h1>🏗️ Glendale Permit Progress Dashboard</h1>
-            <p>431 N Brand Blvd, Glendale, CA 91203 - Tracking Status & Next Steps</p>
-        </div>
+    <!-- Logo (make sure logo.jpg is in the same folder as index.html) -->
+    <img src="logo.svg" alt="Glendale logo" class="logo">
+
+    <div class="header-text">
+        <h1>🏗️ Glendale Permit Progress Dashboard</h1>
+        <p>431 N Brand Blvd, Glendale, CA 91203 - Tracking Status & Next Steps</p>
+    </div>
+</div>
+
 
         <div class="permits-grid">
             <!-- Building Permit BB2005025 -->
