--- a/index.html
+++ b/index.html
@@ -30,25 +30,38 @@
             backdrop-filter: blur(10px);
             border: 1px solid rgba(0, 249, 255, 0.2);
         }
-        .logo {
-    width: 96px;
-    height: auto;
-    border-radius: 8px;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.12);
-    flex-shrink: 0;
+        
+
+         .header {
+    display: flex;
+    align-items: center;        /* vertically center logo + text */
+    justify-content: flex-start;/* align to left of the container */
+    gap: 20px;
+    margin-bottom: 40px;
+    padding-bottom: 30px;
+    border-bottom: 3px solid #00f9ff;
+    flex-wrap: nowrap;          /* keep them in one row on wide screens */
+    text-align: left;
 }
 
-         .header-text {
+/* Bigger, clearer logo for SVG */
+.logo {
+    width: 140px;      /* increase size for visibility — change as needed */
+    height: auto;
+    flex-shrink: 0;
+    border-radius: 8px;
+    padding: 6px;                              /* small padding so transparent SVG stands out */
+    background: rgba(255,255,255,0.95);        /* subtle white bg so logo is clearly visible */
+    box-shadow: 0 8px 20px rgba(0,0,0,0.12);
+    filter: drop-shadow(0 4px 10px rgba(0,0,0,0.12));
+}
+
+/* keep title stacked vertically */
+.header-text {
     display: flex;
     flex-direction: column;
     gap: 6px;
 }
-        .header {
-            text-align: center;
-            margin-bottom: 40px;
-            padding-bottom: 30px;
-            border-bottom: 3px solid #00f9ff;
-        }
 
         .header h1 {
             color: #002133;
@@ -314,7 +327,7 @@
         gap: 12px;
     }
     .header p {
-        width: 100%;
+        width: 120px;
     }
 }
         }
