--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
   flex-shrink: 0;
 
   /* make SVG (or PNG) clearly visible on dark background */
-  background:#002133     /* white background so transparent parts are visible */
+  background-color: #002133;
+   /* white background so transparent parts are visible */
   padding: 8px;            /* space around the logo */
   border-radius: 12px;     /* rounded corners */
   border: 2px solid rgba(0, 249, 255, 0.12); /* subtle cyan outline */
