--- a/index.html
+++ b/index.html
@@ -588,20 +588,20 @@
         
         <div class="summary">
             <div class="summary-card">
-                <div class="summary-number">5</div>
+                <div class="summary-number">6</div>
                 <div class="summary-label">Total Permits</div>
             </div>
             <div class="summary-card">
-                <div class="summary-number">10</div>
+                <div class="summary-number">12</div>
                 <div class="summary-label">Recent Inspections</div>
             </div>
             <div class="summary-card">
-                <div class="summary-number">5</div>
+                <div class="summary-number">6</div>
                 <div class="summary-label">Pending Re-inspections</div>
             </div>
             <div class="summary-card" style="background: linear-gradient(135deg, #e74c3c, #c0392b);">
                 <div class="summary-number">2</div>
-                <div class="summary-label">⚠️ Outstanding Balances</div>
+                <div class="summary-label">⚠️ Critical Issues</div>
             </div>
         </div>
     </div>
